# edu-tools

./: Dockerfile  README.md  pyproject.toml  ui.py
.github/workflows/: docker-image.yml
src/edu_tools/: __init__.py  api.py  influxdb.py  pb.py  utils.py
src/edu_tools/llms/: ark.py  context.py  coze.py  deepseek.py  dify.py  gemini.py  prompts.py  s3.py  volces.py
src/edu_tools/llms/prompts/: math.py  yuwen.py
